kustomize/components/mirror/mirror.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-mirror
  labels:
    quay-component: quay-mirror
  annotations:
    quay-component: mirror
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      quay-component: quay-mirror
  template:
    metadata:
      labels:
        quay-component: quay-mirror
        quay-monitor: "true"
    spec:
      serviceAccountName: quay-app
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: quay-component
                  operator: In
                  values:
                  - quay-mirror
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: config
          projected:
            sources:
              - secret:
                  name: quay-config-secret
              - secret:
                  name: quay-config-tls
        - name: extra-ca-certs
          projected:
            sources:
              - configMap:
                  name: cluster-service-ca
              - configMap:
                  name: cluster-trusted-ca
              - secret:
                  name: extra-ca-certs      
              - secret:
                  name: quay-config-tls
        - name: postgres-certs
          projected:
            sources:
            - secret:
                name: postgresql-ca
                optional: true
            - secret:
                name: postgresql-client-certs
                optional: true
        - name: postgres-certs-store
          emptyDir:
            sizeLimit: 5Mi
      containers:
        - name: quay-mirror
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          image: quay.io/projectquay/quay:latest
          command: ["/quay-registry/quay-entrypoint.sh"]
          args: ["repomirror-nomigrate"]
          ports:
            - containerPort: 9091
              protocol: TCP
          # TODO: Determine if we need to set resource requirements
          volumeMounts:
            - name: config
              readOnly: false
              mountPath: /conf/stack
            - name: extra-ca-certs
              readOnly: true
              mountPath: /conf/stack/extra_ca_certs
            - name: postgres-certs
              mountPath: /run/secrets/postgresql
            - name: postgres-certs-store
              mountPath: /.postgresql
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
