kustomize/components/mirror/mirror-pushgateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-mirror-pushgateway
  labels:
    quay-component: mirror
  annotations:
    quay-component: mirror
spec:
  ports:
    - name: pushgateway
      port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    quay-component: quay-mirror
  type: ClusterIP
